# devconnector/src/main/java/com/devconnector/controller/LikeController.java
@@ -3,6 +3,7 @@ package com.devconnector.controller;
 import com.devconnector.dto.LikeDTO;
 import com.devconnector.service.LikeService;
 import lombok.AllArgsConstructor;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -29,5 +30,10 @@ public class LikeController {
     @GetMapping("/post/{postId}")
     public List<LikeDTO> findLikeByPost(@PathVariable Long postId) {
         return likeService.findLikesByPost(postId);
+    }
+
+    @GetMapping("/post/{postId}/count")
+    public ResponseEntity<?> findLikeByOnePost(@PathVariable Long postId) {
+        return ResponseEntity.ok(likeService.findLikesByOnePost(postId));
     }
 }
